--- a/index.css
+++ b/index.css
@@ -27,6 +27,7 @@ canvas {
 
 .unit {
   background-color: #11242F;
+  position: relative;
 }
 
 .logo {
@@ -76,4 +77,21 @@ canvas {
 .openIcon {
   height: 36px;
   display: block;
+  border: solid 1px #016D71;
+}
+
+.unit-header {
+  font-weight: 900;
+  font-size: 18px;
+  padding: 0;
+  margin: 0;
+  position: absolute;
+  right: 10px;
+  top: 10px;
+}
+
+.toggle-osc {
+  position: absolute;
+  top: 13px;
+  right: 70px;
 }
